fixes paragraph tag on mobile

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -19,6 +19,11 @@
 		letter-spacing: 0;
 		font-weight: 300;
 	}
+	
+	p
+	{
+		width: auto;
+	}
 
 	.container
 	{
